contact.js modified

--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <title>React App</title>
+    <title>Austin</title>
   </head>
 
   <body>
